New in v0.13.3 (??????????)
---------------------------

Fixed some of the --restrict options which would cause spurious
violation errors.

--list-changed-since and --list-at-time now work remotely.
Thanks to Morten Werner Olsen for bug report.


New in v0.13.2 (2003/09/16)
---------------------------

Change ownership policy and added --user-mapping-file and
--group-mapping-file switches.  See man page for more information.

Added option --never-drop-acls to cause fatal error instead of
dropping any acls or acl entries.  Thanks to Greg Freemyer for
suggestion.

Specified socket type as SOCK_STREAM.  (Error reported by Erik
Forsberg.)

Fixed bug backing up unreadable regular files and directories when
rdiff-backup is run by root on the source site and non-root on the
destination side.  (Reported by Troels Arvin and Arkadiusz
Miskiewicz.)

If there is data missing from the destination dir (for instance if a
user mistakenly deletes it), only warn when restoring, instead of
exiting with error.

Fixed bug in EA/ACL restoring, noticed by Greg Freemyer.

Updated quoting of filenames and extended attributes names to match
forthcoming attr/facl utilities.  Strange characters should now be
properly escaped.

Fixed problems with --restrict options that would cause proper
sessions to fail.  Thanks to Randall Nortman for error report.

Added new time specification by backup number.  So now you can
'--remove-older-than 2B' or '--list-at-time 0B'.  Original suggestion
by Alan Bailward.

File examples.html added to distribution; examples section removed
from man page.

Removed option --no-change-dir-inc-perms.  Instead when copying
permissions to directory increments, mask with 0777.


New in v0.13.1 (2003/08/08)
---------------------------

Restore of archives made by 0.10.x and earlier fixed, although hard
link information is not restored unless it is current in the mirror.
(Bug reported by Jeff Lessem.)

Fixed problem with door files locally when repository is remote.